# Simp1e

./: .clang-format  .gitignore  CMakeLists.txt  CMakeLists.txt.user.bak  CMakePresets.json  README.md  TODO.md  TODO.txt  android_deployment_settings.json  foo  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  mainwindow.ui  vcpkg-configuration.json  vcpkg.json  xmake.lua
DynamicLoadingExperiment/: App.cpp  Library.cpp  Structures.h  xmake.lua
Editor/: Editor.cpp  xmake.lua
Experimentation/: CMakeLists.txt  Experimentation.cpp  xmake.lua
Experimentation/Asteroids/: Asteroids.cpp  Asteroids.qrc  Asteroids_Linux.qrc  CMakeLists.txt  xmake.lua
Experimentation/Asteroids/include/Asteroids/: Game test.h  Game.h
Misc/Openclipart/: xmake.lua
Misc/Prototyping/: DOCKS AND MENUS AND THINGS.cpp
Misc/Simp1e.ECS/: CMakeLists.txt
Misc/Simp1e.ECS/include/Simp1e/: Game.h
Misc/Simp1e.ECS/include/Simp1e/ECS/_TODO_/: ComponentCast.h  EventType.h  OnKeyboardComponent.h  SystemManager.h  SystemTypeMacro.h  TextComponent.h
Misc/Simp1e.Qt/: xmake.lua
Misc/Simp1e.UI/: xmake.lua
Misc/Simp1e.UI.Maps/: xmake.lua
Prototyping/: xmake.lua
Prototyping/Games/Side Scroller - Simpler/: CMakeLists.txt  Game - Simpler Side Scroller.cpp  NOTES.h  SideScroller.qrc  xmake.lua
Prototyping/Games/Side Scroller - Simpler/include/Simp1e/SideScroller/: Images.h  IsMouseOver.h  MovePlayerCommand.h  MovePositionCommand.h  QtViewCenteredSystem.h  SetImageCommand.h  SideScrollerGraphicsScene.h  SideScrollerGraphicsView.h  ViewCenteredComponent.h
Resources/: Editor.qrc
SImp1e.ECS.Components/: CMakeLists.txt  xmake.lua
Scripts/: compile_commands_watcher.py
Simp1e/: CMakeLists.txt  xmake.lua
Simp1e.Core/: xmake.lua
Simp1e.Data/: xmake.lua
Simp1e.Data.Specs/: JsonRecordData.Spec.h  xmake.lua
Simp1e.ECS/: xmake.lua
Simp1e.ECS.Components.Common/: CMakeLists.txt  xmake.lua
Simp1e.ECS.Components.Core/: CMakeLists.txt  xmake.lua
Simp1e.ECS.Components.GUI/: CMakeLists.txt  xmake.lua
Simp1e.ECS.Core/: CMakeLists.txt  xmake.lua
Simp1e.ECS.DLL/: README.md  Simp1e.ECS.DLL.cpp  xmake.lua
Simp1e.ECS.Events.Common/: CMakeLists.txt  xmake.lua
Simp1e.ECS.Events.Common/include/Simp1e/: IKeyboardEvent.h  KeyboardEvent.h
Simp1e.ECS.Local/: CMakeLists.txt  xmake.lua
Simp1e.ECS.NativeAPI/: CMakeLists.txt  xmake.lua
Simp1e.ECS.NativeAPI.Client/: CMakeLists.txt  xmake.lua
Simp1e.ECS.NativeAPI.Host/: CMakeLists.txt  xmake.lua
Simp1e.ECS.Plugins/: CMakeLists.txt  xmake.lua
Simp1e.ECS.PointerStorage/: xmake.lua
Simp1e.ECS.PointerStorageClient/: xmake.lua
Simp1e.ECS.Services/: xmake.lua
Simp1e.ECS.Systems.Common/: CMakeLists.txt  xmake.lua
Simp1e.Editor/: Editor.cpp  xmake.lua
Simp1e.Editor.DLL/: README.md  Simp1e.Editor.DLL.cpp  xmake.lua
Simp1e.Editor.Exe/: README.md  Simp1e.Editor.Exe - draft.cpp  Simp1e.Editor.Exe.cpp  Simp1e.Editor.Exe.rc  Simp1e.cpp  Simp1e.rc  xmake.lua
Simp1e.Editor.Types/: xmake.lua
Simp1e.Editor2.DLL/: README.md  Simp1e.Editor2.DLL.cpp  xmake.lua
Simp1e.LibraryLoader/: xmake.lua
Simp1e.MapEditor/: xmake.lua
Simp1e.Maps/: xmake.lua
Simp1e.QT/: CMakeLists.txt
Simp1e.QT.ECS/: xmake.lua
Simp1e.QT.ECS.Components/: xmake.lua
Simp1e.Qt/: CMakeLists.txt  xmake.lua
Simp1e.Qt.ECS/: CMakeLists.txt  xmake.lua
Simp1e.Qt.ECS.Core/: xmake.lua
Simp1e.Qt.ECS.DLL/: README.md  Simp1e.Qt.ECS.DLL.cpp  xmake.lua
Simp1e.Qt.ECS.GUI/: xmake.lua
Simp1e.Qt.ECS.GUI.DLL/: Simp1e.Qt.ECS.GUI.DLL.cpp  xmake.lua
Simp1e.Qt.ECS.Graphics/: xmake.lua
Simp1e.Qt.ECS/include/Simp1e/: IQtComponentEventHandler.h  IQtComponentPainter.h  IQtComponentUpdateHandler.h  IQtGuiSystem.h  QMainWindowComponent.h  QMenuComponent.h  QSimp1eGraphicsItemComponent.h  QSimp1eImageComponent.h  QtActionComponent.h  QtCameraComponentUpdateHandler.h  QtComponentUpdateHandler.h  QtEngine.h  QtGUISystem.h  QtGameLoop.h  QtImageComponentPainter.h  QtMainWindowComponent.h  QtMenuComponent.h  QtParallaxEffectComponent.h  QtParallaxEffectComponentUpdateHandler.h  QtPositionComponentUpdateHandler.h  QtRectangleComponentPainter.h  QtRotationComponentUpdateHandler.h  QtSimp1eGraphicsItemComponent.h  QtSimp1eImageComponent.h  QtSizeComponentUpdateHandler.h  QtSystemGroupTypes.h
Simp1e.Qt.MapEditor/: xmake.lua
Simp1e.Qt.Maps/: xmake.lua
Simp1e.Qt.v1/: xmake.lua
Simp1e.Qt/include/Simp1e/: FromQKeyEvent.h  FromQKeyValue.h  QSimp1eApp.h  QSimp1eGraphicsItem.h  QSimp1eGraphicsScene.h  QSimp1eGraphicsView.h  QSimp1eImage.h  QSimp1eMainWindow.h  QtSimp1eGraphicsItem.h  QtSimp1ePlatformDetection.h  ToQColor.h  ToQPointF.h  ToQRectF.h
Simp1e.Qt/include/Simp1e/Conversions/: ToQPointF.h
Simp1e.Qt/include/Simp1e/UI/: Qt.h
Simp1e.Qt/include/Simp1e/UI/Qt/: IQtGraphicsItem.h  QtCircle.h  QtGraphicsItem.h  QtGraphicsItemWithBorder.h  QtImage.h  QtMoveableResizableGraphicsItem.h  QtResizeRotateHandle.h  QtResizeRotateHandleCollection.h  QtScene.h  QtTile.h  QtTileGrid.h  QtTileGridHexagonRenderer.h  QtTileGridIsometricRenderer.h  QtTileGridRectangleRenderer.h  QtTileGridRenderer.h  QtTileGridTilesAndHexagonsRenderer.h  QtUI.h  QtView.h
Simp1e.Qtx/: xmake.lua
Simp1e.ServiceHost/: xmake.lua
Simp1e.Specs/: Foo.Spec.h  _RunTests.cpp  _SpecHelper.h  xmake.lua
Simp1e.UI.MapEditor/: xmake.lua
Simp1e.UI.Maps/: xmake.lua
Simp1e/include/Simp1e/: Color.h  Direction.h  Point.h  PointerDeleter.h  Position.h  Rectangle.h  Size.h  VoidPointer.h  sreal.h
Tests/: DataSpecHelper.h  RunTests.cpp  SpecHelper.h  SpecHelperInternal.cpp  SpecHelperInternal.h  Test1.Spec.h  __SpecHeaderIncludes.h  xmake.lua
_Drafting_/: LibOrExeRC.rc
_Drafting_/Simp1e.QT.ECS/: CMakeLists.txt  xmake.lua
_Drafting_/Simp1e.QT.ECS/include/Simp1e/ECS/_TODO_/: Conversions.h  QTGraphicsItemComponent.h  QtRenderSystem.h  QtTextComponentUpdateHandler.h
_Drafting_/Simp1e.QT.ECS/include/Simp1e/ECS/_TODO_/Conversions/: FromQtKey.h  FromQtMouseButton.h
cmake/: rewrite_android_json.cmake
scripts/: compile_commands_watcher.py
xmake/: Logging.lua  MrowrLib.lua  Specs.lua  lib.lua  mac_icon.lua  qt.lua  string_format.lua
(+597 files in other folders)
